[package]
name = "freesasa-sys"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["bioinfomatics", "protein", "sasa", "structural biology", "pdb"]
repository = "https://gitlab.developers.cam.ac.uk/ch/sormanni/freesasa_ffi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.63.0"
autotools = "0.2"
