[package]
name = "freesasa-sys"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
keywords = ["bioinfomatics", "protein", "sasa", "structural-biology", "pdb"]
repository = "https://gitlab.developers.cam.ac.uk/ch/sormanni/freesasa_sys"
readme = "README.md"
description = "Rust raw FFI bindings for the freesasa C library"
categories = ["science", "api-bindings", "mathematics", "algorithms", "parsing"]
documentation = "https://docs.rs/freesasa-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.63.0"
autotools = "0.2"

[package.metadata.docs.rs]
no-deps = true
